--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/LuanB-compt/coin-collect-data/issues"
   },
-  "homepage": "https://github.com/LuanB-compt/coin-collect-data#readme"
+  "homepage": "https://github.com/LuanB-compt/coin-collect-data#readme",
+  "dependencies": {
+    "axios": "^1.6.5"
+  }
 }
