--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/LuanB-compt/coin-collect-data#readme",
   "dependencies": {
-    "axios": "^1.6.5"
+    "axios": "^1.6.5",
+    "sequelize": "^6.35.2",
+    "sqlite3": "^5.1.7"
   }
 }
