--- a/Daily/package.json
+++ b/Daily/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/LuanB-compt/coin-collect-data#readme",
   "dependencies": {
     "axios": "^1.6.5",
+    "node-binance-api": "^0.13.1",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.7"
   }
